@@ -1,6 +1,6 @@
-d58715e3941978c452a8c73cd52e710c *DESCRIPTION
+b057cff95f837352e61256164412bd5e *DESCRIPTION
 8ff564086915c45cbe38d6800cc9c610 *NAMESPACE
-27f6967e2bc780e61c3cc22579ef6d90 *R/g.analyse.R
+ce6413f8c1925ce7146048199380b309 *R/g.analyse.R
 a5ad9b1ea3e5fd32dbcd457e1229714b *R/g.binread.R
 15efc62778b11ca78b0df600e93f400f *R/g.calibrate.R
 1b85a94cb6bc26fd3579096420b18d6d *R/g.createcoordinates.R
@@ -19,8 +19,8 @@ dd8d97fba64c7263e5a46cf842788522 *R/g.plot.R
 5e07c17c608dee884ea2ad0a1bfa159f *data/data.getmeta.RData
 0cb14c60e18f5bd4c15fb942c95aea2b *data/data.inspectfile.RData
 d93cbf2daebf37aa8fb30f5fcea2ff79 *data/datalist
-19173df031d49f1da68307252ce1ff07 *inst/NEWS.Rd
-2f158708bdcf94b6869abdb8a1f9c1ad *man/GGIR-package.Rd
+1050cd36d0391158bfd5100de77bcfdc *inst/NEWS.Rd
+ebce32ad3e61d89ea3eca15fcda0e0cb *man/GGIR-package.Rd
 8516da773298c62a15237a92d9583b87 *man/data.calibrate.Rd
 b54ecafe06099b398351eb3bc12e4d3f *man/data.getmeta.Rd
 247abe86085bdbdd069fc9ce8e170177 *man/data.inspectfile.Rd
